fixed : logo size on mobile

--- a/app/assets/stylesheets/all/pages.scss
+++ b/app/assets/stylesheets/all/pages.scss
@@ -345,7 +345,7 @@ bu-pages-show {
 @media (max-width: 320px) {
   .page-header-container {
     .page-logo {
-      top: 21%;
+      top: 120px;
     }
   }
 }
